samples/_failures_safe/1761375858_7cf915_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_726a36a2.c: In function ‘main’:
./samples/SAFE/__tmp_726a36a2.c:137:21: error: expected ‘;’ at end of input
  137 |             continue
      |                     ^
      |                     ;
./samples/SAFE/__tmp_726a36a2.c:137:13: error: expected declaration or statement at end of input
  137 |             continue
      |             ^~~~~~~~
./samples/SAFE/__tmp_726a36a2.c:137:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_726a36a2.c:137:13: error: expected declaration or statement at end of input
